--- a/itemsservice/items-service.properties
+++ b/itemsservice/items-service.properties
@@ -10,3 +10,12 @@ spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+
+server.port= 8080
+
+spring.cloud.loadbalancer.ribbon.enabled = false
+
+eureka.instance.preferIpAddress = true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
