--- a/ownersservice/owners-service.properties
+++ b/ownersservice/owners-service.properties
@@ -1,3 +1,4 @@
+example.property= I AM THE DEFAULT
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
@@ -7,13 +8,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.database.driverClassName= org.postgresql.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=true
 
 server.port= 8080
 
 spring.cloud.loadbalancer.ribbon.enabled = false
-        
-management.endpoints.web.exposure.include=*
-management.endpoints.enabled-by-default=true
 
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
